# src/domain/users/users.controller.ts
@@ -1,0 +1,27 @@
+import {
+    Controller,
+    Post,
+    Get,
+    Param,
+    Body,
+    HttpCode,
+    HttpStatus,
+} from '@nestjs/common';
+import { UsersService } from './users.service';
+import { CreateUserDto } from './dto/create-user.dto';
+
+@Controller('users')
+export class UsersController {
+    constructor(private readonly usersService: UsersService) {}
+
+    @Post()
+    @HttpCode(HttpStatus.CREATED)
+    async create(@Body() dto: CreateUserDto) {
+        return this.usersService.create(dto);
+    }
+
+    @Get(':id')
+    async findOne(@Param('id') id: string) {
+        return this.usersService.findById(id);
+    }
+}
